--- a/src/app.html
+++ b/src/app.html
@@ -1,19 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
-		<link rel='icon' type='image/svg+xml' href='%sveltekit.assets%/favicon.svg' />
-		<link rel='icon' type='image/png' href='%sveltekit.assets%/favicon.png' />
-
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="darkreader-lock">
-
-		<link rel='stylesheet' href='%sveltekit.assets%/global.css'>
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body>
-		<div style='display: contents'>
-			%sveltekit.body%
-		</div>
+	<body class='dark-mode' data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
