--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+
+		<link rel='icon' type='image/svg+xml' href='%sveltekit.assets%/favicon.svg' />
+		<link rel='icon' type='image/png' href='%sveltekit.assets%/favicon.png' />
+
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="darkreader-lock">
 		%sveltekit.head%
 	</head>
 	<body class='dark-mode' data-sveltekit-preload-data="hover">
